<resources>
    <string name="app_name" translatable="false">To-Do Collection</string>
    <string name="title_activity_act_main">To-Do Collection</string>
    <string name="title_activity_act_handle_todo_new">"New "</string>
    <string name="title_activity_act_handle_todo_edit">"Edit "</string>
    <string name="title_activity_act_read_todo">To-do List</string>
    <string name="title_activity_act_about">About To-Do Collection</string>
    <string name="lbl_todo_name">Name</string>
    <string name="lbl_todo_content">Content</string>
    <string name="title_menu_save">Save</string>
    <string name="title_menu_cancel">Cancel</string>
    <string name="title_impossible_to_save">Impossible to save!</string>
    <string name="message_invalid_name">Invalid name!</string>
    <string name="message_empty_fields">Empty fields wasn\'t saved.</string>
    <string name="message_empty_list">The list is empty!</string>
    <string name="lbl_ok" translatable="false">OK</string>
    <string name="lbl_null" translatable="false" />
    <string name="obj_todo" translatable="false">Todo</string>
    <string name="card_delete">Delete</string>
    <string name="title_deleting">"Deleting "</string>
    <string name="msg_deleting">You are about to delete this item. Do you want to delete?</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_about">About</string>
    <string name="lbl_use">This application is a To-Do list collection to organize the user\'s routine and tasks.</string>
    <string name="lbl_built_on">Built on June 4, 2019</string>
    <string name="lbl_built_in">in Android Studio 3.3.2 by</string>
    <string name="lbl_author" translatable="false">Luiz Alberto Teodoro de Arruda</string>
    <string name="lbl_email" translatable="false"><![CDATA[<luizarruda@alunos.utfpr.edu.br>]]></string>
    <string name="email_subject">I came from your To-Do Collection app!</string>
    <string name="mailto" translatable="false">mailto:luizarruda@alunos.utfpr.edu.br</string>
    <string name="title_menu_edit">Edit</string>
    <string name="title_menu_delete">Delete</string>
    <string name="title_items_selected">" items selected"</string>
</resources>
